<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_select_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_huangli_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2018年1月12日"
                        android:textSize="@dimen/text_12" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp_2"
                        android:layout_toRightOf="@id/tv_huangli_date"
                        android:src="@mipmap/down_small_arrow" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10">

                    <LinearLayout
                        android:id="@+id/ll_last"
                        android:layout_width="@dimen/dp_50"
                        android:layout_height="@dimen/dp_50"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/dp_10"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/hl_nlqh_prev_icon"
                            android:tint="#D65959" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/iv_first"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dp_5"
                            android:src="@mipmap/fz_dong"
                            android:tint="#D65959" />

                        <ImageView
                            android:id="@+id/iv_second"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dp_5"
                            android:src="@mipmap/fz_yue"
                            android:tint="#D65959" />

                        <ImageView
                            android:id="@+id/iv_three"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dp_5"
                            android:src="@mipmap/fz_nian"
                            android:tint="#D65959" />

                        <ImageView
                            android:id="@+id/iv_four"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dp_5"
                            android:src="@mipmap/fz_jiu"
                            android:tint="#D65959" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_next"
                        android:layout_width="@dimen/dp_50"
                        android:layout_height="@dimen/dp_50"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/dp_10"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/hl_nlqh_next_icon"
                            android:tint="#D65959" />
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/dp_10">

                    <TextView
                        android:id="@+id/tv_tiangan_zodiac"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="丁酉年 葵丑月 葵卯日 己未时 [属鸡]" />

                    <TextView
                        android:id="@+id/tv_weekday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:text="周四" />

                    <TextView
                        android:id="@+id/tv_sort_week"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:text="第2周" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_05"
                    android:background="@color/gray_999999" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/dp_5"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_10">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_5">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/yi_bg"
                            android:paddingLeft="@dimen/dp_5"
                            android:paddingRight="@dimen/dp_5"
                            android:text="宜"
                            android:textColor="@color/white"
                            android:textSize="@dimen/dp_10" />

                        <TextView
                            android:id="@+id/tv_yi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:text="结婚 出行 签订合同 交易 纳才 栽种 安床 " />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_5">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ji_bg"
                            android:paddingLeft="@dimen/dp_5"
                            android:paddingRight="@dimen/dp_5"
                            android:text="忌"
                            android:textColor="@color/white"
                            android:textSize="@dimen/dp_10" />

                        <TextView
                            android:id="@+id/tv_ji"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:text="搬新房 动土 诉讼 祈福 安门 挂匾 做灶 " />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="60dp"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/dp_10">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/huangli_infomation" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/card_refreah_icon"
                            android:tint="@color/gray_999999" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_5"
                            android:text="@string/change_change" />
                    </LinearLayout>


                </RelativeLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_10">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/every_day_sample" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="@dimen/dp_5"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="最先道歉的人最勇敢，最先原谅的人最坚强"
                        android:textColor="@color/white" />
                </FrameLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5">

                    <TextView
                        android:id="@+id/tv_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/more_news"
                        android:textColor="@color/blue_18a0bc" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/dp_5"
                        android:layout_toLeftOf="@id/tv_more"
                        android:src="@mipmap/card_more_icon"
                        android:tint="@color/blue_18a0bc" />

                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</android.support.constraint.ConstraintLayout>